<resources>
    <string name="app_name">ClubStorage</string>

    <!--    Nav Header & menuBar-->
    <string name="nav_header_title">Club Storage</string>
    <string name="nav_header_version">0.1.0</string>
    <string name="nav_header_desc">CS Logo</string>
    <string name="logout">Logout</string>
    <string name="logo_description">App Logo</string>
    <string name="user_pic_description">Nutzerbild</string>

    <!--    Menüpunkte-->
    <string name="menu_shelf">Regal</string>
    <string name="menu_article">Artikel</string>
    <string name="menu_users">Benutzer</string>
    <string name="menu_settings">Einstellungen</string>

    <string-array name="Units_string_array">
        <item>Stk.</item>
        <item>Liter</item>
        <item>kg</item>
    </string-array>

    <string-array name="permission_string_array">
        <item>no Access</item>
        <item>read-only</item>
        <item>read/write</item>
        <item>Admin</item>
    </string-array>

    <!--    AddArticleFragment-->
    <string name="add_a_new_Article">Ein neuer Artikel wurde angelegt</string>
    <string name="edit_a_Article">Der Artikel wurde geändert</string>
    <string name="error_add_article_empty_field">Bitte einen Titel und einen Stückpreis eingeben</string>

    <!--    AddUser Fragment-->
    <string name="add_user_title">Neuen Nutzer anlegen</string>
    <string name="add_user_first_name">Vorname</string>
    <string name="add_user_last_name">Nachname</string>
    <string name="add_user_email">E-Mailadresse</string>
    <string name="add_user_password">Passwort</string>
    <string name="add_user_password_repeat">Passwort wiederholen</string>
    <string name="add_user_permission">Berechtigung</string>
    <string name="add_a_new_user">Ein neuer User wurde angelegt</string>
    <string name="add_user_commit">Nutzer erstellen</string>

    <!--    AddArticleFragment-->
    <string name="add_article_titel">Neuen Artikel anlegen</string>
    <string name="add_article_item_titel">Artikelbezeichnung</string>
    <string name="add_article_item_price">Preis pro Einheit</string>
    <string name="add_article_commit">Artikel erstellen</string>
    <string name="add_article_item_unit">Einheit</string>
    <string name="add_article_item_note">Notiz (optional)</string>

    <!--    ArticleFragment-->
    <string name="article_price">%1$s €/%2$s</string>
    <string name="space">%1$s %2$s</string>
    <string name="was_deleted"> wurde entfernt</string>
    <string name="commit">Übernehmen</string>
    <string name="edit_article">Artikel bearbeiten</string>
    <string name="save_article">Artikel speichern</string>

    <!--  Shelf-->
    <string name="show_shelf">Regal anzeigen</string>
    <string name="edit_shelf">Regal bearbeiten</string>
    <string name="save_shelf">Regal speichern</string>
    <string name="edit_a_shelf">Regal wurde geändert</string>
    <string name="error_add_shelf_empty_field">Bitte einen Regaltitel eintragen</string>
    <string name="add_a_new_shelf">Ein neues Regal wurde angelegt</string>
    <string name="add_shelf_title">Neues Regal anlegen</string>
    <string name="edit_txt_shelf_add_title">Regalbezeichnung</string>
    <string name="add_shelf_btn_lable">Regal anlegen</string>
    <string name="add_shelf_note">Notiz (optional)</string>
    <string name="shelf_counter_suffix">&#160;Artikel vorhanden</string>
    <string name="add_article_to_shelf_title">Zu %1$s hinzufügen</string>

    <!--    Login Activity-->
    <string name="title_activity_login">Bitte einloggen</string>
    <string name="hint_login_user">Email/User</string>
    <string name="hint_login_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">Wilkommen </string>
    <string name="invalid_username">Keine gültige EMail Adresse</string>
    <string name="invalid_password">Passwort muss länger als 5 Zeichen sein</string>
    <string name="login_failed">"Login fehlgeschlagen"</string>
    <string name="creators">by Thomas Brandl and Felix Wild</string>
    <string name="logout_msg"> ausgeloggt</string>
    <string name="user_pw_compare">Passwörter unterschiedlich</string>
    <string name="user_pw_length">Passwort zu kurz</string>
    <string name="user_insufficient_input">Bitte alle Felder korrekt ausfüllen</string>
    <string name="user_pw_minlength">Min. 5 Zeichen</string>
    <string name="required">Erforderlich</string>

    <!--  Settings  -->
    <string name="new_pw">neues Passwort</string>
    <string name="repeat_new_pw">neues PW wiederholen</string>
    <string name="pw_old">altes Passwort</string>
    <string name="change_pw">Passwort ändern</string>
    <string name="btn_update_userdata">Daten aktualisieren</string>

</resources>
