<?xml version="1.0" encoding="utf-8"?>

<!--
Elemente in der NavBar Seitenleiste
Steuerung erfolgt über java/ui/FragmentUnterordner
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shelf"
            android:icon="@drawable/ic_menu_shelf"
            android:title="@string/menu_shelf" />
        <item
            android:id="@+id/nav_article"
            android:icon="@drawable/ic_menu_articel"
            android:title="@string/menu_article" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_menu_users"
            android:title="@string/menu_users" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>
